--- a/how-to-buy-thermomix.html
+++ b/how-to-buy-thermomix.html
@@ -41,7 +41,7 @@
 
         <div class="main-container">
             <main>
-                <form action="https://formsubmit.co/your@email.com" method="POST">
+                <form action="https://formsubmit.co/greenanna100@gmail.com" method="POST">
                     <label for="fname">First Name:</label>
                     <input id="fname" type="text" name="First name">
                     <label for="sname">Surname:</label>
