modified the form

--- a/how-to-buy-thermomix.html
+++ b/how-to-buy-thermomix.html
@@ -62,25 +62,18 @@
                             <input class="getitfree" type="radio" name="radio" value="Free">
                         </li>
                         <li>
-                            <label for="onepayment" class="onepayment">Pay for Thermomix by one payment</label>
+                            <label for="onepayment" class="onepayment">Pay for Thermomix in one payment</label>
                             <input class="onepayment" type="radio" name="radio" value="One payment">
                         </li>
-            
                         <li>
-                            <label for="48months" class="48months">32,48 per 48 months</label>
-                            <input class="48months" type="radio" name="radio" value="48 Months">
-                        </li>
-                        <li>
-                            <label for="36months" class="36months">40,62 per 36 months</label>
-                            <input class="36months" type="radio" name="radio" value="36 Months">
-                        </li>
-                        <li>
-                            <label for="24months" class="24months">57,07 per 24 months</label>
-                            <input class="24months" type="radio" name="radio" value="24 Months">
-                        </li>
-                        <li>
-                            <label for="12months" class="12months">106,74 per 12 month</label>
-                            <input class="12months" type="radio" name="radio" value="12 Months">
+                        <label for="spreadpayments" class="spreadpayments">pay for Thermomix by spread payments:</label> 
+                        <select id="spreadpayments" name="radio">
+                            <option value="48 motnhs">none</option>
+                            <option value="48 motnhs">32,48 per 48 months</option>
+                            <option value="36 months">40,62 per 36 months</option>
+                            <option value="24 months">57,07 per 24 months</option>
+                            <option value="12 months">106,74 per 12 month</option>
+                        </select>
                         </li>
                     </ul>
                     
