--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="header-container">
             <header>
                 <ul>
-                    <li class="header-item"><i class="fa fa-envelope envelope-icon" style="col"></i></li>
+                    <li class="header-item"><i class="fa fa-envelope envelope-icon"></i></li>
                     <li class="header-item"><a href="mailto:greenanna100@gmail.com">greenanna100@gmail.com</a></li>
                     <li class="header-item"><i class="fa fa-phone"></i></li>
                     <li class="header-item"><a href="tel:07719755330">07719755330</a></li>
