--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <img id="cupcake" src="images/cupcake.jpeg"/>
                     <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/kZGYuOSVJ2k" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                     <div id="links">
-                        <h2><a href="#">How to buy Thermomix in the uk</a></h2>
+                        <h2><a href="how-to-buy-thermomix.html">How to buy Thermomix in the uk</a></h2>
                         <h2><a href="#">Get thermomix for free</a></h2>
                     </div>
                 </div>
