--- a/how-to-buy-thermomix.html
+++ b/how-to-buy-thermomix.html
@@ -41,6 +41,11 @@
 
         <div class="main-container">
             <main>
+                <div class="text-container">
+                    <article>
+                        <p>The only way to buy a Thermomix in the UK is through an independent Thermomix advisor like myself. Arrange an initial, non-binding, free presentation - by filling out the form below. I'll call you and we'll work out the details. As a diamond Thermomix advisor in the UK with many years of experience, I will guide you through the entire process and then help you adjust the Thermomix capabilities to your individual needs and diet.</p>
+                    </article>
+                </div>
                 <form action="https://formsubmit.co/greenanna100@gmail.com" method="POST">
                     <label class="fname" for="fname">First Name:</label>
                     <input class="fname" type="text" name="First name"  required>
