added a video to the article

--- a/how-to-buy-thermomix.html
+++ b/how-to-buy-thermomix.html
@@ -45,6 +45,12 @@
                     <article>
                         <p>The only way to buy a Thermomix in the UK is through an independent Thermomix advisor like myself. Arrange an initial, non-binding, free presentation - by filling out the form below. I'll call you and we'll work out the details. As a diamond Thermomix advisor in the UK with many years of experience, I will guide you through the entire process and then help you adjust the Thermomix capabilities to your individual needs and diet.</p>
                     </article>
+                    <video src="videos/how-to-buy-thermomix-video1.mp4" controls>
+                        <p>
+                            Your browser doesn't support HTML video. Here is a
+                            <a href="videos/how-to-buy-thermomix-video1.mp4">link to the video</a> instead.
+                          </p>
+                    </video>
                 </div>
                 <form action="https://formsubmit.co/greenanna100@gmail.com" method="POST">
                     <label class="fname" for="fname">First Name:</label>
