--- a/how-to-buy-thermomix.html
+++ b/how-to-buy-thermomix.html
@@ -64,12 +64,13 @@
 
                     <ul id="radio-buttons">
                         <li>
-                            <label for="getitfree" class="getitfree">Get thermomix for free by join my team</label>
-                            <input class="getitfree" type="radio" name="Payment type" value="Free">
+                            <label for="getitfree" class="getitfree getitfreelabel">Get thermomix for free by join my team</label>
+                            <input class="getitfree getitfreeinput" type="radio" name="Payment type" value="Free">
+                         
                         </li>
                         <li>
-                            <label for="onepayment" class="onepayment">Pay for Thermomix in one payment</label>
-                            <input class="onepayment" type="radio" name="Payment type" value="One payment">
+                            <label for="onepayment" class="onepayment onepaymentlabel">Pay for Thermomix in one payment</label>
+                            <input class="onepayment onepaymentinput" type="radio" name="Payment type" value="One payment">
                         </li>
                         <li>
                         <label for="spreadpayments" class="spreadpayments">pay for Thermomix by spread payments:</label> 
