--- a/how-to-buy-thermomix.html
+++ b/how-to-buy-thermomix.html
@@ -30,7 +30,7 @@
                     <li class="nav-item"><a href="#">About Me</a></li>
                     <li class="nav-item"><a href="#">What is Thermomix</a></li>
                     <li class="nav-item"><a href="how-to-buy-thermomix.html">How To Buy Thermomix</a></li>
-                    <li class="nav-item"><a href="#">How To Get Thermomix For Free</a></li>
+                    <li class="nav-item"><a href="get-thermomix-for-free.html">How To Get Thermomix For Free</a></li>
                     <li class="nav-item"><a href="#">FAQ</a></li>
                     <li class="nav-item"><a href="#">Inspiration</a></li>
                     <li class="nav-item"><a href="#">Contact Me</a></li>
