--- a/get-thermomix-for-free.html
+++ b/get-thermomix-for-free.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en-GB">
+<html>
     <head>
         <title>change your life with Thermomix</title>
         <meta charset="utf-8"/>
         <link rel="stylesheet" href="styles/stylesheet.css" />
-        <link rel="stylesheet" href="styles/home.css" />
+        <link rel="stylesheet" href="styles/get-thermomix-for-free.css" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-..." crossorigin="anonymous" />
     </head>
     <body>
@@ -37,24 +37,7 @@
 
                 </ul>
             </nav>
-        </div>    
-        <div class="main-container">
-            <main>        
-                <div class="text-container">
-                    <img id="friend" src="images/friend.jpeg"/>
-                    <h1>Anna Knas - Diamond Thermomix advisor 8 team leader</h1>
-                    <p>First of all, I am a happy Thermomix user for many years. I joined the company in 2016 to receive (work out) the latest Thermomix model for free and to show other busy families that you can beautifully reconcile all responsibilities and serve fresh, healthy and creative food at home every day without effort and save a lot at the same time. And almost everything depends on what is on our plate: our health, energy or lack of it, well-being, creative thinking, immunity and, above all, our slim figure. It's not worth saving money on these things</p>
-                    <img id="cupcake" src="images/cupcake.jpeg"/>
-                    <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/kZGYuOSVJ2k" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                    <div id="links">
-                        <h2><a href="how-to-buy-thermomix.html">How to buy Thermomix in the uk</a></h2>
-                        <h2><a href="get-thermomix-for-free.html">Get thermomix for free</a></h2>
-                    </div>
-                </div>
-            </main>
-        </div>
-        
-
+        </div>  
         <div class="footer-container">
             <footer>
                 <ul>
@@ -66,7 +49,6 @@
                     <li class="header-item"><a class="fab fa-tiktok" href="https://www.tiktok.com/@anna.knas.thermomix.uk?_t=8eKzBzjvg3G&_r=1"></a></li>
                 </ul>
             </footer>
-        </div>
-        
+        </div>  
     </body>
 </html>
