--- a/get-thermomix-for-free.html
+++ b/get-thermomix-for-free.html
@@ -38,6 +38,39 @@
                 </ul>
             </nav>
         </div>  
+        <div class="main-container">
+            <main>
+                <div class="text-container">
+                    <p>Discover the most fun way to get your Thermomix</p>
+                    <p>Earn your Thermomix, along with other great rewards and incentives when you become a Thermomix consultant.We are a direct sales business and not multi-level sales. There' s no cost to joining us. All you have to do is place 4 sales in 90 days - then you  will get your Thermomix for free.</p>
+
+                    <p>I, as a diamond team leader, will guide you through the entire process. Together we will choose a free training day for you, then we will make a plan for you and the first joint presentation for your potential clients. Who knows, maybe you'll stay with me after that - many people joined me to earn Thermomix ... and have stayed with me for longer. Extra gifts every month, luxury trips abroad and career opportunities - few companies offer this. And friendships for life ... after all, we share passion.</p>
+                    <p>If you want to find out more, just fill the form belowg</p>
+                </div>
+                <div id="video-container">
+                    <video id="video1" src="videos/get-thermomix-for-free-video1.mp4" controls></video>
+                </div>
+                <form action="https://formsubmit.co/greenanna100@gmail.com" method="POST">
+                    <label class="fname" for="fname">First Name:</label>
+                    <input class="fname" type="text" name="First name"  required>
+
+                    <label for="sname" class="sname">Surname:</label>
+                    <input class="sname" type="text" name="Surname" required>
+
+                    <label for="email" class = "email" >Email:</label>
+                    <input class = "email" type="email" name="Email" required>
+
+                    <label for="postcode" class = "postcode">Postcode:</label>
+                    <input class = "postcode" type="text" name="Postcode" required>
+                    
+                    <label for="mnumber" class = "mnumber" >Phone Number:</label>
+                    <input class = "mnumber" type="text" name="Mobile Number" required>
+                    
+                    <button id="submit" type="submit">Send your request & book your demo</button>
+               </form>
+            </main>
+
+        </div>
         <div class="footer-container">
             <footer>
                 <ul>
