fixed form layout

--- a/how-to-buy-thermomix.html
+++ b/how-to-buy-thermomix.html
@@ -64,7 +64,7 @@
 
                     <div id="radio-buttons">
                         <input class="getitfree getitfreeinput" type="radio" name="Payment type" value="Free">
-                        <label for="getitfree" class="getitfree getitfreelabel">Get thermomix for free by join my team</label>
+                        <label for="getitfree" class="getitfree getitfreelabel">Get thermomix for free by joining my team</label>
                         
                         <input class="onepayment onepaymentinput" type="radio" name="Payment type" value="One payment">
                         <label for="onepayment" class="onepayment onepaymentlabel">Pay for Thermomix in one payment</label>
