added new features to the form

--- a/how-to-buy-thermomix.html
+++ b/how-to-buy-thermomix.html
@@ -70,7 +70,8 @@
                         <label for="onepayment" class="onepayment onepaymentlabel">Pay for Thermomix in one payment</label>
                         
                         <label for="spreadpayments" class="spreadpayments spreadpaymentslabel">Pay for Thermomix by spread payments:</label> 
-                        <select class="spreadpayments spreadpaymentsinput" name="Spread payment">
+                        <input class="spreadpayments spreadpaymentsinput" type="radio" name="Payment type" value="Spread payments">
+                        <select class="spreadpayments spreadpaymentsselect" name="Spread payment">
                             <option value="48 motnhs">none</option>
                             <option value="48 motnhs">32,48 per 48 months</option>
                             <option value="36 months">40,62 per 36 months</option>
