--- a/about-me.html
+++ b/about-me.html
@@ -4,7 +4,7 @@
         <title>change your life with Thermomix</title>
         <meta charset="utf-8"/>
         <link rel="stylesheet" href="styles/stylesheet.css" />
-        <link rel="stylesheet" href="styles/home.css" />
+        <link rel="stylesheet" href="styles/how-to-buy-thermomix.css" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-..." crossorigin="anonymous" />
     </head>
     <body>
@@ -38,23 +38,28 @@
                 </ul>
             </nav>
         </div>    
+
         <div class="main-container">
-            <main>        
+            <main>
                 <div class="text-container">
-                    <img id="friend" src="images/friend.jpeg"/>
-                    <h1>Anna Knas - Diamond Thermomix advisor 8 team leader</h1>
-                    <p>First of all, I am a happy Thermomix user for many years. I joined the company in 2016 to receive (work out) the latest Thermomix model for free and to show other busy families that you can beautifully reconcile all responsibilities and serve fresh, healthy and creative food at home every day without effort and save a lot at the same time. And almost everything depends on what is on our plate: our health, energy or lack of it, well-being, creative thinking, immunity and, above all, our slim figure. It's not worth saving money on these things</p>
-                    <img id="cupcake" src="images/cupcake.jpeg"/>
-                    <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/kZGYuOSVJ2k" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                    <div id="links">
-                        <h2><a href="how-to-buy-thermomix.html">How to buy Thermomix in the uk</a></h2>
-                        <h2><a href="get-thermomix-for-free.html">Get thermomix for free</a></h2>
-                    </div>
+                    <article>
+                        <p>I have always tried to lead a healthy lifestyle. I am aware that our slim figure, daily energy levels (or lack thereof), and our immunity to diseases depend on what we put on our plate.</p>
+                        <p>We pass on the same habits we nurture to our children as well. There are genetic diseases in the world, but also the majority (decidedly so) that result from imitating poor dietary habits learned.</p>
+                        <p>I have tried many diets in my life, more out of curiosity than necessity, and today I know one thing for sure. By eating sensibly, having varied meals, and avoiding processed food lacking in any nutritional value, we can feel young and energetic in our own bodies, regardless of age.</p>
+                        <p>I understand that in a busy world where most of us have to balance full-time work with managing a household (not just cooking but also cleaning, laundry, taking care of young ones, or helping older ones with homework, etc.), this can be a HUGE challenge.</p>
+                        <p>And where do we find time for rest or personal hobbies like exercising in all of this? And yet, we know how important these aspects are. If we neglect ourselves, frustration, burnout, and sometimes even depression can quickly catch up with us.</p>
+                        <p>We go to sleep and wake up unhappy. Can you imagine how destructive the impact is on your whole family? I was very close to that stage myself once. Fortunately, a friend showed me Thermomix back then, and it literally changed my life. It brought joy back into it. Now I can work at full capacity without neglecting my home. I also have time for my own workouts. I fulfill myself without feeling guilty about neglecting or messing up something along the way.</p>
+                        <p>My family enjoys fresh, varied, and chemically-free delicious meals every day because they are the pillars of their and my health and life. It doesn't cost me much effort or time either. I manage everything perfectly!</p>
+                        <p>I became a Thermomix representative in the UK to show others that it is possible.</p>
+                        <p>If you think you can't afford to buy one for some reason, don't worry. I can help you with that too. Every year, several people under my guidance earn a Thermomix in the UK without investing even 1 pound. If you want to change your life, I have many different options for you.</p>
+                        <p>Feel free to contact me at greenanna100@gmail.com or <a href="tel:07719755330">+44 7719755330</a>.<br>
+                            Current Thermomix offer in the UK:<br>
+                            <a href="https://bit.ly/3P5QtaQ">https://bit.ly/3P5QtaQ</a></p>
+                        <p>
+                    </article>
                 </div>
             </main>
         </div>
-        
-
         <div class="footer-container">
             <footer>
                 <ul>
@@ -68,5 +73,6 @@
             </footer>
         </div>
         
+
     </body>
 </html>
