--- a/how-to-buy-thermomix.html
+++ b/how-to-buy-thermomix.html
@@ -27,7 +27,7 @@
             <nav>
                 <ul>
                     <li class="nav-item"><a href="index.html">Home</a></li>
-                    <li class="nav-item"><a href="#">About Me</a></li>
+                    <li class="nav-item"><a href="about-me.html">About Me</a></li>
                     <li class="nav-item"><a href="#">What is Thermomix</a></li>
                     <li class="nav-item"><a href="how-to-buy-thermomix.html">How To Buy Thermomix</a></li>
                     <li class="nav-item"><a href="get-thermomix-for-free.html">How To Get Thermomix For Free</a></li>
