paragraph change in about-me.html

--- a/about-me.html
+++ b/about-me.html
@@ -52,7 +52,7 @@
                            My family enjoys fresh, varied, and chemically-free delicious meals every day because they are the pillars of their and my health and life. It doesn't cost me much effort or time either. I manage everything perfectly!<br><br>
                            I became a Thermomix representative in the UK to show others that it is possible.<br><br>
                            If you think you can't afford to buy one for some reason, don't worry. I can help you with that too. Every year, several people under my guidance earn a Thermomix in the UK without investing even 1 pound. If you want to change your life, I have many different options for you.</p>
-                           Feel free to contact me at greenanna100@gmail.com or <a href="tel:07719755330">+44 7719755330</a>.<br>
+                        <p>Feel free to contact me at greenanna100@gmail.com or <a href="tel:07719755330">+44 7719755330</a>.
                             Current Thermomix offer in the UK:<br>
                             <a href="https://bit.ly/3P5QtaQ">https://bit.ly/3P5QtaQ</a></p>
                         <p>
