added images to about-me.html

--- a/about-me.html
+++ b/about-me.html
@@ -4,7 +4,7 @@
         <title>change your life with Thermomix</title>
         <meta charset="utf-8"/>
         <link rel="stylesheet" href="styles/stylesheet.css" />
-        <link rel="stylesheet" href="styles/how-to-buy-thermomix.css" />
+        <link rel="stylesheet" href="styles/about-me.css" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-..." crossorigin="anonymous" />
     </head>
     <body>
@@ -43,6 +43,9 @@
             <main>
                 <div class="text-container">
                     <article>
+                        <div id="image1">
+                            <img src="images/about-me-image1.jpeg">
+                        </div>
                         <p>I have always tried to lead a healthy lifestyle. I am aware that our slim figure, daily energy levels (or lack thereof), and our immunity to diseases depend on what we put on our plate.<br><br>
                            We pass on the same habits we nurture to our children as well. There are genetic diseases in the world, but also the majority (decidedly so) that result from imitating poor dietary habits learned.<br><br>
                            I have tried many diets in my life, more out of curiosity than necessity, and today I know one thing for sure. By eating sensibly, having varied meals, and avoiding processed food lacking in any nutritional value, we can feel young and energetic in our own bodies, regardless of age.<br><br>
@@ -54,8 +57,9 @@
                            If you think you can't afford to buy one for some reason, don't worry. I can help you with that too. Every year, several people under my guidance earn a Thermomix in the UK without investing even 1 pound. If you want to change your life, I have many different options for you.</p>
                         <p>Feel free to contact me at greenanna100@gmail.com or <a href="tel:07719755330">+44 7719755330</a>.
                             Current Thermomix offer in the UK:<br>
-                            <a href="https://bit.ly/3P5QtaQ">https://bit.ly/3P5QtaQ</a></p>
-                        <p>
+                            <a href="https://bit.ly/3P5QtaQ">https://bit.ly/3P5QtaQ</a>
+                        </p>
+                        <iframe id="yt-video" src="https://www.youtube.com/embed/F6UZNsxTKMM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                     </article>
                 </div>
             </main>
