--- a/get-thermomix-for-free.html
+++ b/get-thermomix-for-free.html
@@ -41,7 +41,7 @@
         <div class="main-container">
             <main>
                 <div class="text-container">
-                    <p>Discover the most fun way to get your Thermomix</p>
+                    <h2>Discover the most fun way to get your Thermomix</h2>
                     <p>Earn your Thermomix, along with other great rewards and incentives when you become a Thermomix consultant.We are a direct sales business and not multi-level sales. There' s no cost to joining us. All you have to do is place 4 sales in 90 days - then you  will get your Thermomix for free.</p>
 
                     <p>I, as a diamond team leader, will guide you through the entire process. Together we will choose a free training day for you, then we will make a plan for you and the first joint presentation for your potential clients. Who knows, maybe you'll stay with me after that - many people joined me to earn Thermomix ... and have stayed with me for longer. Extra gifts every month, luxury trips abroad and career opportunities - few companies offer this. And friendships for life ... after all, we share passion.</p>
