--- a/index.html
+++ b/index.html
@@ -6,23 +6,12 @@
         <link rel="stylesheet" href="styles/stylesheet.css" />
         <link rel="stylesheet" href="styles/home.css" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-..." crossorigin="anonymous" />
+        <script type="module" src="scripts/main.js"></script>
     </head>
     <body>
-        <div class="header-container">
-            <header>
-                <ul>
-                    <li class="header-item"><i class="fa fa-envelope envelope-icon"></i></li>
-                    <li class="header-item"><a href="mailto:greenanna100@gmail.com">greenanna100@gmail.com</a></li>
-                    <li class="header-item"><i class="fa fa-phone"></i></li>
-                    <li class="header-item"><a href="tel:07719755330">07719755330</a></li>
-                    <li class="header-item"><a class="fab fa-facebook-f" href="https://www.facebook.com/profile.php?id=100064203331859"></a></li>
-                    <li class="header-item"><a class="fab fa-tiktok" href="https://www.tiktok.com/@anna.knas.thermomix.uk?_t=8eKzBzjvg3G&_r=1"></a></li>
 
-                    
-                </ul>
-            </header>
-        </div>
-    
+        <default-header></default-header>
+
         <div class="nav-container">
             <nav>
                 <ul>
