--- a/get-thermomix-for-free.html
+++ b/get-thermomix-for-free.html
@@ -28,12 +28,12 @@
                 <ul>
                     <li class="nav-item"><a href="index.html">Home</a></li>
                     <li class="nav-item"><a href="about-me.html">About Me</a></li>
-                    <li class="nav-item"><a href="#">What is Thermomix</a></li>
+                    <li class="nav-item"><a href="what-is-thermomix.html">What is Thermomix</a></li>
                     <li class="nav-item"><a href="how-to-buy-thermomix.html">How To Buy Thermomix</a></li>
                     <li class="nav-item"><a href="get-thermomix-for-free.html">How To Get Thermomix For Free</a></li>
-                    <li class="nav-item"><a href="#">FAQ</a></li>
-                    <li class="nav-item"><a href="#">Inspiration</a></li>
-                    <li class="nav-item"><a href="#">Contact Me</a></li>
+                    <li class="nav-item"><a href="faq.html">FAQ</a></li>
+                    <li class="nav-item"><a href="inspiration.html">Inspiration</a></li>
+                    <li class="nav-item"><a href="contact-me.html">Contact Me</a></li>
 
                 </ul>
             </nav>
