--- a/about-me.html
+++ b/about-me.html
@@ -56,7 +56,7 @@
                         <p>My family enjoys fresh, varied, and chemically-free delicious meals every day because they are the pillars of their and my health and life. It doesn't cost me much effort or time either. I manage everything perfectly!</p>
                         <p>I became a Thermomix representative in the UK to show others that it is possible.</p>
                         <p>If you think you can't afford to buy one for some reason, don't worry. I can help you with that too. Every year, several people under my guidance earn a Thermomix in the UK without investing even 1 pound. If you want to change your life, I have many different options for you.</p>
-                        <iframe id="yt-video" src="https://www.youtube.com/embed/F6UZNsxTKMM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                        <iframe id="yt-video" width="560" height="315" src="https://www.youtube.com/embed/F6UZNsxTKMM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                     </article>
                 </div>
             </main>
