--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
         <title>change your life with Thermomix</title>
         <meta charset="utf-8"/>
         <link rel="stylesheet" href="styles/stylesheet.css" />
-        <link rel="stylesheet" href="styles/home.css" />
+        <link rel="stylesheet" href="styles/index.css" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-..." crossorigin="anonymous" />
-        <script type="module" src="scripts/main.js"></script>
     </head>
     <body>
 
