--- a/how-to-buy-thermomix.html
+++ b/how-to-buy-thermomix.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="styles/stylesheet.css" />
         <link rel="stylesheet" href="styles/how-to-buy-thermomix.css" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-..." crossorigin="anonymous" />
+        <meta name="description" content="Buy Thermomix through Anna, an experienced Thermomix advisor in the UK. Learn how to maximize the capabilities of Thermomix for your diet and lifestyle.">
     </head>
     <body>
         <div class="header-container">
