--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <main>        
                 <div class="text-container">
                     <img id="friend" src="images/friend.jpeg"/>
-                    <h1>Anna Knas - Diamond Thermomix advisor 8 team leader</h1>
+                    <h1>Anna Knas - Diamond Thermomix advisor<br>8 team leader</h1>
                     <p>First of all, I am a happy Thermomix user for many years. I joined the company in 2016 to receive (work out) the latest Thermomix model for free and to show other busy families that you can beautifully reconcile all responsibilities and serve fresh, healthy and creative food at home every day without effort and save a lot at the same time. And almost everything depends on what is on our plate: our health, energy or lack of it, well-being, creative thinking, immunity and, above all, our slim figure. It's not worth saving money on these things</p>
                     <img id="cupcake" src="images/cupcake.jpeg"/>
                     <div id="links">
