--- a/inspiration.html
+++ b/inspiration.html
@@ -40,6 +40,8 @@
         <div class="main-container">
             <main>        
                 <div class="text-container">
+                    <p>Work in progress</p>
+                </div>
             </main>
         </div>
         
