--- a/about-me.html
+++ b/about-me.html
@@ -64,12 +64,39 @@
         <div class="footer-container">
             <footer>
                 <ul>
-                    <li class="footer-item"><a class="fa fa-envelope envelope-icon"></a></li>
-                    <li class="footer-item"><a href="mailto:greenanna100@gmail.com">greenanna100@gmail.com</a></li>
-                    <li class="footer-item"><a class="fa fa-phone"></a></li>
-                    <li class="footer-item"><a href="tel:07719755330">07719755330</a></li>
-                    <li class="header-item"><a class="fab fa-facebook-f" href="https://www.facebook.com/profile.php?id=100064203331859"></a></li>
-                    <li class="header-item"><a class="fab fa-tiktok" href="https://www.tiktok.com/@anna.knas.thermomix.uk?_t=8eKzBzjvg3G&_r=1"></a></li>
+                    <li class="footer-item">
+                        <div class="mail">
+                            <a class="fa fa-envelope envelope-icon"></a>
+                            <a href="mailto:greenanna100@gmail.com">greenanna100@gmail.com</a>
+                        </div>
+                    </li>
+                    <li class="footer-item">
+                        <div class="phone">
+                            <a class="fa fa-phone"></a>
+                            <a href="tel:07719755330">07719755330</a>
+                        </div>
+                    </li>
+                    <li class="footer-item"><a class="fab fa-facebook-f" href="https://www.facebook.com/profile.php?id=100064203331859"></a></li>
+                    <li class="footer-item"><a class="fab fa-tiktok" href="https://www.tiktok.com/@anna.knas.thermomix.uk?_t=8eKzBzjvg3G&_r=1"></a></li>
+                </ul>
+            </footer>
+        </div><div class="footer-container">
+            <footer>
+                <ul>
+                    <li class="footer-item">
+                        <div class="mail">
+                            <a class="fa fa-envelope envelope-icon"></a>
+                            <a href="mailto:greenanna100@gmail.com">greenanna100@gmail.com</a>
+                        </div>
+                    </li>
+                    <li class="footer-item">
+                        <div class="phone">
+                            <a class="fa fa-phone"></a>
+                            <a href="tel:07719755330">07719755330</a>
+                        </div>
+                    </li>
+                    <li class="footer-item"><a class="fab fa-facebook-f" href="https://www.facebook.com/profile.php?id=100064203331859"></a></li>
+                    <li class="footer-item"><a class="fab fa-tiktok" href="https://www.tiktok.com/@anna.knas.thermomix.uk?_t=8eKzBzjvg3G&_r=1"></a></li>
                 </ul>
             </footer>
         </div>
