--- a/how-to-buy-thermomix.html
+++ b/how-to-buy-thermomix.html
@@ -44,6 +44,7 @@
             <main>
                 <div class="text-container">
                     <article>
+                        <h1>How to buy Thermomix in the UK</h1>
                         <p>The only way to buy a Thermomix in the UK is through an independent Thermomix advisor like myself. Arrange an initial, non-binding, free presentation - by filling out the form below. I'll call you and we'll work out the details. As a diamond Thermomix advisor in the UK with many years of experience, I will guide you through the entire process and then help you adjust the Thermomix capabilities to your individual needs and diet.</p>
                     </article>
                 </div>
@@ -85,7 +86,7 @@
                     <button id="submit" type="submit">Send your request & book your demo</button>
                </form>
                <div id="video-container">
-                    <p>There is not reson to wait to get your thermomix straight away. Get it now and change your life imidiatelly. I promise you, it will pay itself from the first day...</p>
+                    <p>There's no reason to delay purchasing your Thermomix. Acquire it now and transform your life immediately. I assure you, it will pay for itself from day one.</p>
                     <video id="video1" src="videos/how-to-buy-thermomix-video1.mp4" controls></video>
                 </div>
             </main>
