--- a/index.html
+++ b/index.html
@@ -10,24 +10,26 @@
     <body>
 
         <div class="header-container">
-            <header>
-                <ul>
-                    <li class="header-item">
-                        <div class="mail">
-                            <a class="fa fa-envelope envelope-icon"></a>
-                            <a href="mailto:greenanna100@gmail.com">greenanna100@gmail.com</a>
-                        </div>
-                    </li>
-                    <li class="header-item">
-                        <div class="phone">
-                            <a class="fa fa-phone"></a>
-                            <a href="tel:07719755330">07719755330</a>
-                        </div>
-                    </li>
-                    <li class="header-item"><a class="fab fa-facebook-f" href="https://www.facebook.com/profile.php?id=100064203331859"></a></li>
-                    <li class="header-item"><a class="fab fa-tiktok" href="https://www.tiktok.com/@anna.knas.thermomix.uk?_t=8eKzBzjvg3G&_r=1"></a></li>
-                </ul>
-            </header></div>
+            <div class="header-container">
+                <header>
+                    <ul>
+                        <li class="header-item">
+                            <div class="mail">
+                                <a class="fa fa-envelope envelope-icon"></a>
+                                <a href="mailto:greenanna100@gmail.com">greenanna100@gmail.com</a>
+                            </div>
+                        </li>
+                        <li class="header-item">
+                            <div class="phone">
+                                <a class="fa fa-phone"></a>
+                                <a href="tel:07719755330">07719755330</a>
+                            </div>
+                        </li>
+                        <li class="header-item"><a class="fab fa-facebook-f" href="https://www.facebook.com/profile.php?id=100064203331859"></a></li>
+                        <li class="header-item"><a class="fab fa-tiktok" href="https://www.tiktok.com/@anna.knas.thermomix.uk?_t=8eKzBzjvg3G&_r=1"></a></li>
+                    </ul>
+                </header>
+            </div>
 
         <div class="nav-container">
             <nav>
@@ -52,7 +54,7 @@
                     <p>First of all, I am a happy Thermomix user for many years. I joined the company in 2016 to receive (work out) the latest Thermomix model for free and to show other busy families that you can beautifully reconcile all responsibilities and serve fresh, healthy and creative food at home every day without effort and save a lot at the same time. And almost everything depends on what is on our plate: our health, energy or lack of it, well-being, creative thinking, immunity and, above all, our slim figure. It's not worth saving money on these things</p>
       
                     <div id="links">
-                        <h2><a href="how-to-buy-thermomix.html">How to buy Thermomix in the uk</a></h2>
+                        <h2><a href="how-to-buy-thermomix.html">How to buy Thermomix in the UK</a></h2>
                         <h2><a href="get-thermomix-for-free.html">Get thermomix for free</a></h2>
                     </div>
                     <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/kZGYuOSVJ2k" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
