--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <div class="text-container">
                     <img id="friend" src="images/friend.jpeg"/>
                     <h1>Anna Knas - Diamond Thermomix advisor<br>& team leader</h1>
-                    <p>First and foremost, I've been a satisfied Thermomix user for many years. I joined the company in 2016, not only to secure the latest Thermomix model for free but also to demonstrate to other busy families how one can seamlessly balance all responsibilities and serve fresh, healthy, and creative meals at home every day, without effort, while also saving significantly. After all, so much depends on what's on our plate: our health, our energy levels or lack thereof, our well-being, our ability to think creatively, our immune system, and, most importantly, our slim figure. It's not worth skimping on these aspects.</p>
+                    <p>First and foremost, I've been a satisfied Thermomix user for many years. I joined the company in 2016, not only to secure the latest Thermomix model for free but also to demonstrate to other busy families how one can seamlessly balance all responsibilities and serve fresh, healthy, and creative meals at home every day, without effort, while also saving significantly.</p><p> After all, so much depends on what's on our plate: our health, our energy levels or lack thereof, our well-being, our ability to think creatively, our immune system, and, most importantly, our slim figure. It's not worth skimping on these aspects.</p>
       
                     <div id="links">
                         <h2><a href="how-to-buy-thermomix.html">How to buy Thermomix in the UK</a></h2>
